# adventofcode

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day2.py  day20.py  day21.py  day22.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  mypy.ini
2021/src/: day10.txt  day13.py  day14.py  day16.py  day2.py  day24.py  day4.py  day5.py  day6.py  day7.py  day9.py
2022/: day1.py  day10.py  day11.py  day12.py  day13.py  day15.py  day5.py  day6.py  day8.py  template.py
2022/src/: day1.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day7.py  day9.py
2023/: day1.php  day2.php
2024/aoc/: Cargo.toml  README.md
day1/: day1.py  tests.py
src/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day2.py  day20.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  test_day1.py  test_day2.py
