[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Matt Bell <38588937+bellmatt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
