[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Matt Bell <38588937+bellmatt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
black = "22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
