[tool.poetry]
name = "adventofcode"
version = "2022"
description = "Advent of Code solutions"
authors = ["Matt Bell <38588937+bellmatt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.991"
pre-commit = "~2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
